--- a/website/package.json
+++ b/website/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d website"
   },
   "keywords": [],
   "author": "",
   "license": "ISC"
+  "homepage": "https://Creatune.github.io/rjoshi.github.io",
+  "dependencies": {
+    "gh-pages": "3.1.0"
+  }
 }
