--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "https://Creatune.github.io/rjoshi.github.io",
+  "homepage": "https://Creatune.github.io/rjoshi",
   "dependencies": {
     "gh-pages": "3.1.0"
   }
