--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "homepage": "https://Creatune.github.io/rjoshi",
   "dependencies": {
     "gh-pages": "3.1.0"
