--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "Rishikesh Joshi",
   "license": "MIT",
-  "homepage": "https://Creatune.github.io/rjoshi",
+  "homepage": "https://creatune.github.io/rjoshi",
   "dependencies": {
     "gh-pages": "3.1.0"
   }
